# car-damage-detection-deep-learning

./: .gitignore  CONTRIBUTING.md  GITHUB_UPLOAD_GUIDE.md  LICENSE  MODEL_WEIGHTS.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
damage_detection_app/: README.md  app.py
notebooks/official/custom/: sdk-custom-image-classification-online.ipynb
